# ChatBox

./: .anjuta_sym_db.db  .gitattributes  AUTHORS  Iloveprogramming.cpp  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  test8.1.cpp  test8.2.cpp
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  noip
Debug/src/.deps/: main.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  exam1.8.cpp  love_programming.cpp  main.cc  main.cc~  test8.3.cpp
